Revert "Fix z-index of carousel indicators"
This reverts commit 395bd921b01320dc6c602a70d92af5466559a4dd.

--- a/ferrerih_qfg1_stylesheet.css
+++ b/ferrerih_qfg1_stylesheet.css
@@ -109,7 +109,6 @@ body:before {
 	bottom: -50px;
 	left: 42%;
 	width: 73%;
-	z-index: 0 !important;
 }
 .carousel-indicators li {
 	border-color: #b30000 !important; 
@@ -623,7 +622,6 @@ button, .btn {
 }
 .carousel-indicators {
 	bottom: 0px;
-	z-index: 1 !important;
 }
 .center {
 	width: 55%; 
@@ -731,7 +729,6 @@ ul.affix {
 }
 .carousel-indicators {
 	bottom: 0px;
-	z-index: 1 !important;
 }
 .center {
 	width: 50%; 
