--- a/ferrerih_qfg3_stylesheet.css
+++ b/ferrerih_qfg3_stylesheet.css
@@ -134,7 +134,6 @@ body:before {
 	bottom: -45px;
 	left: 42%;
 	width: 85%;
-	z-index: 0 !important;
 }
 .carousel-indicators li {
 	border-color: purple !important; 
@@ -657,7 +656,6 @@ button, .btn {
 	bottom: 0px;
 	padding-bottom: 0px;
 	width: 75%;
-	z-index: 1 !important;
 }
 .center {
 	width: 55%; 
@@ -768,7 +766,6 @@ ul.affix {
 	bottom: 0px;
 	padding-bottom: 0px;
 	width: 75%;
-	z-index: 1 !important;
 }
 .center {
 	width: 50%; 
